# wrapper

./: .babelrc  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Fusion-Native2.d.ts  Fusion-Native2.gen.txt  LICENSE  Menu.ts  Misc.ts  NotificationsSettings.ts  README.md  TODO.md  Translations.ts  babel-plugin-loop-optimizer.js  bootstrap.js  entity_data.gen.txt  eslint.config.mjs  gameevents_dump.txt  global.ts  index.ts  latest_circular.txt  menu.d.ts  octarine-core.d.ts  octarine-core.gen.txt  octarine.d.ts  package-lock.json  package.json  standard.d.ts  tsconfig.json  tslint.json  typedoc.json  v8_flags.txt  v8_possible_flags.txt
.ai/: PROJECT.md  README.md
.claude/: settings.local.json
.cursor/: README.md  mcp.json
.github/workflows/: checkout.yaml
d.ts/: Fusion-Native2.d.ts  bootstrap.d.ts  menu.d.ts
examples/: package.json  tsconfig.json
examples/scripts/: AutoSteal.js  AutoSteal.ts  CreepBlock.js  CreepBlock.ts  EzTechies.js  EzTechies.ts  Orders.js  Orders.ts  WKAbuse.js  WKAbuse.ts  utils.js  utils.ts
internal/: README.md  debug.ts  index.ts  prediction_debug.ts  test.ts  translations.ts
internal/main-menu/: Util.ts  index.ts
internal/prototypes/: array.ts
internal/tests/: index.ts  interpolate.ts  nav2.ts
internal/typography/: fonts-general.ts  fonts-jp.ts  fonts-zh.ts  index.ts
internal/view-units/: test.ts
msvs/: generate_msvs.bat
ninja/: build.bat  generate_ninja.bat
prototypes/: array.ts  bigint.ts  index.ts  math.ts  number.ts
scripts_files/: hardcoded_icons.json  hardcoded_priorities.json  ignore_data.json  known_strings.json  network_particles.json  network_projectile.json  wrapper.wasm  wrapper_simd.wasm
scripts_files/Map/: Bottom.json  DireBase.json  DireBottomDireTide.json  DireBottomJungle.json  DireBottomRoute.json  DireMiddleRoute.json  DireTopDireTide.json  DireTopJungle.json  DireTopRoute.json  Middle.json  RadiantBase.json  RadiantBottomDireTide.json  RadiantBottomJungle.json  RadiantBottomRoute.json  RadiantMiddleRoute.json  RadiantTopDireTide.json  RadiantTopJungle.json  RadiantTopRoute.json  River.json  RiverBottom.json  RiverMiddle.json  RiverTop.json  Roshan.json  Top.json
scripts_files/materials/: dirt.vmat_c  dirt_png_494be4c1.vtex_c
scripts_files/models/: cube.vmdl_c  minecraft_cube.vmdl_c
scripts_files/particles/: arrow_2d.vpcf_c
scripts_files/translations/: cn.json  en.json  ru.json
src_bootstrap/: Color.ts  EntityManager.ts  Events.ts  QAngle.ts  Vector.ts  Vector2.ts  Vector2D.ts  Vector3.ts
src_ts/: AbilityAbuser.ts  AbyssalAbuse.ts  AegisEnd.ts  Aggro_deaggro.ts  AntiInitiation.ts  AutoBlinkRange.ts  AutoCrit.ts  AutoDeny.ts  AutoDeward.ts  AutoHighFive.ts  AutoSteal.ts  AutoTechiesBug.ts  BackCast.ts  ChatWheel.ts  Combo_Arc.ts  Combo_Invoker.ts  Combo_LC.ts  Cooldown Display.ts  CourierController.ts  CreepBlock.ts  CustomRanges.ts  Debugger.ts  EMB.ts  EzTechies.ts  FindRegionInfo.ts  GameFinder.ts  GoodRespawn.ts  I Hate Leaps.ts  IllusionSplitter.ts  KunkkaAutoStack.ts  Leaver.ts  MineDestroy.ts  Misc.ts  MorphlingExploit.ts  MorphlingExploit.ts_  Notification.ts  Orders.ts  PTSwitcher.ts  Particle MapHack.ts  PerfectDagger.ts  (+13 more)
src_ts/AllVision/: Core.ts  Techies.ts  TreantProtector.ts
src_ts/ArcWarden/: Menu.ts  index.ts
src_ts/BadGuy/: bootstrap.ts
src_ts/BeAware/: TreantProtector.ts  Wisp.ts  bootstrap.ts
src_ts/ComboHeroes/: bootstrap.ts
src_ts/Core/: Listeners.ts
src_ts/CourierController/: Base.ts  Menu.ts  bootstrap.ts  index.ts
src_ts/CrutchesSDK/: CrutchesSDK.d.ts  Imports.ts  Wrapper.ts
src_ts/Custom game exploits/: AABS.ts  CustomHeroChaos.ts  CustomHeroChaosImproved.ts  GuardingAthena.ts  menu.ts
src_ts/Dodger/: Menu.ts  bootstrap.ts  index.ts
src_ts/ItemManager/: bootstrap.ts
src_ts/Overlay/: ItemPanel.ts
src_ts/Radiuses/: bootstrap.ts
src_ts/SDK Examples/: menu.ts
src_ts/SkywrathMage/: Base.ts  Menu.ts  index.ts
src_ts/UnitBlocker/: bootstrap.ts  menu.ts
src_ts/XAIO/: bootstrap.ts
src_ts/defaults/: AutoArmlet.ts  AutoLH.ts  CourierController.ts  Dodger.ts  EMB.ts  JungleMapHack.ts  Snatcher.ts  TrueSight.ts  VBE.ts
src_ts/wrapper/: Combo.ts  Decorators.ts  ITypes.d.ts  Imports.ts  global.ts
tools/: dump_mod_names.json  modifiers-exports.js  modifiers-generator.js
tools/dumps/: dump_mod_names.json  dump_schema_classes_inheritance.json
wasm_source/: CMakeLists.txt  Vector.h  build.bat  build_nosimd.bat  build_simd.bat  crc32.h  exports.cc  image_utils.cc  reader.h  resource_utils.cc  stdafx.h  valve_s3tc.cc  vhcg.cc  vhcg.h  vmatrix.cc  vmatrix.h  world_sim.cc
wasm_source/lodepng/: lodepng.cpp  lodepng.h  lodepng_util.cpp  lodepng_util.h
wrapper/: Decorators.ts  ITypes.d.ts  Imports.ts  global.ts
wrapper/Base/: AABB.ts  Color.ts  DataTeamPlayer.ts  EntityProperties.ts  Matrix.ts  Matrix3x4.ts  Matrix4x4.ts  ModifierParams.ts  NetworkedParticle.ts  NeutralSpawnBox.ts  NeutralSpawnerBox.ts  Particle.ts  PlayerData.ts  PlayerEventData.ts  PlayerTeamData.ts  PortalPoint.ts  QAngle.ts  Quaternion.ts  QuickBuySlot.ts  Rectangle.ts  StockInfo.ts  TreeModelReplacement.ts  UnitPortalData.ts  Vector2.ts  Vector3.ts  Vector4.ts
wrapper/Data/: GameData.ts  ImageData.ts  PathData.ts  TurnData.ts
wrapper/Enums/: ABILITY_TYPES.ts  ATTACK_DAMAGE_STRENGTH.ts  AbilityLogicType.ts  ArmorType.ts  AttackDamageType.ts  Attributes.ts  BackgroundCover.ts  BrawlActive.ts  CollisionFlag.ts  CollisionTypes.ts  ConnectionState.ts  CourierState.ts  CourierState_t.ts  DAMAGE_AMPLIFY.ts  DAMAGE_TYPES.ts  DOTACustomHeroPickRulesPhase.ts  DOTACustomHeroPickRulesPhase_t.ts  DOTAGameMode.ts  DOTAGameState.ts  DOTAGameUIState.ts  DOTAHUDVisibility.ts  DOTAHUDVisibility_t.ts  DOTAHeroPickState.ts  DOTAHullSize.ts  DOTAScriptInventorySlot.ts  DOTAScriptInventorySlot_t.ts  DOTAUnitAttackCapability.ts  DOTAUnitAttackCapability_t.ts  DOTAUnitMoveCapability.ts  DOTAUnitMoveCapability_t.ts  DOTA_ABILITY_BEHAVIOR.ts  (+69 more)
wrapper_autogen/: SchemaClassesInheritance.json  autogen.js  autogen_imports.js
(+8573 files in other folders)
